syntax = "proto3";

// ==========================================================================================
// Author: Pablo González García.
// Created: 02/02/2026
// Last edited: 02/02/2026
// ==========================================================================================


// ==============================
// DEFAULT
// ==============================

package ai_service.v1;


// ==============================
// SERVICES
// ==============================

service AIService
{
    // ---- Models ---- //

    // List installed models.
    rpc list_models() returns (ListModelResponse);

    // Load a model in Triton.
    rpc load_model(LoadModelRequest) returns (ModelStatus);

    // Unload a model from Triton.
    rpc unload_model(UnloadModelRequest) returns (ModelStatus);


    // ---- Inference ---- //

    // Normal inference.
    rpc make_inference(InferenceRequest) returns (InferenceResponse);

    // Streamed inference.
    rpc make_streamed_inference(InferenceRequest) returns (stream InferenceResponse);
}


// ==============================
// ENUMS
// ==============================

enum ModelState
{
    UNKNOWN = 0;
    LOADING = 1;
    READY = 2;
    UNLOADED = 3;
    ERROR = 4;
}


// ==============================
// MESSAGES
// ==============================

// ---- Models ---- //

message LoadModelRequest
{
    string name = 1;
    string version = 2;
    string server = 3;
}

message UnloadModelRequest
{
    string name = 1;
    string version = 2;
    string server = 3;
}

message ModelMetadata
{
    string name = 1;
    string version = 2;
    string server = 3;
}

message ListModelResponse
{
    repeated ModelMetadata models = 1;
}

message ModelStatus
{
    string name = 1;
    string version = 2;
    string server = 3;

    ModelState state = 4;
    string message = 5;
}